finally fixed the header (lets see on iphone)

--- a/wp-content/themes/amnesty/sass/_header.sass
+++ b/wp-content/themes/amnesty/sass/_header.sass
@@ -83,7 +83,7 @@
   @media (max-width: $breakpoint1)
     padding-left: 110px
     margin: 0 20px 0 0
-    font-size: 1em
+    font-size: .8em
     height: $headerheight/2
     line-height: 1.2
 
