--- a/wp-content/themes/amnesty/sass/_layout.sass
+++ b/wp-content/themes/amnesty/sass/_layout.sass
@@ -341,7 +341,7 @@ body
       min-width: 400px
     @media (max-width: $breakpoint3)
       flex: 0 0 100%
-      max-width: none
+      min-width: auto
     img
       width: 100%
       height: 100%
